fix various stylistic and layout issues

--- a/src/scss/components/OperationDetailsComponent.scss
+++ b/src/scss/components/OperationDetailsComponent.scss
@@ -97,6 +97,11 @@
         }
     }
 
+    .device-operations {
+        display: inline-flex;
+        flex-direction: column;
+    }
+
     .device-operation-name {
         margin-bottom: 4px;
         font-size: 16px;
